# fly-on-the-wall

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  DECISIONS.md  README.md  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
crates/fly-asr/: Cargo.toml
crates/fly-audio/: Cargo.toml
crates/fly-calendar/: Cargo.toml
crates/fly-capture-screen/: Cargo.toml
crates/fly-capture-screen/examples/: screen_smoke.rs
crates/fly-capture-screen/src/: ffmpeg.rs  lib.rs  window_list.rs
crates/fly-core/: Cargo.toml
crates/fly-diarize/: Cargo.toml
crates/fly-llm/: Cargo.toml
crates/fly-llm/src/: anthropic.rs  lib.rs  mock.rs  openai_compat.rs
crates/fly-mcp/: Cargo.toml
crates/fly-secrets/: Cargo.toml
crates/fly-storage/: Cargo.toml
crates/fly-storage/src/: attachments.rs  folders.rs  jobs.rs  lib.rs  meetings.rs  migrations.rs  notes.rs  recovery.rs  templates.rs  transcripts.rs
crates/fly-storage/tests/: migration_v2.rs
crates/looma-asr/: Cargo.toml
crates/looma-audio/: Cargo.toml
crates/looma-audio/src/: cpal_backend.rs  lib.rs  mix.rs  null.rs  pulse_loopback.rs  vad.rs
crates/looma-calendar/: Cargo.toml
crates/looma-capture-screen/: Cargo.toml
crates/looma-core/: Cargo.toml
crates/looma-diarize/: Cargo.toml
crates/looma-llm/: Cargo.toml
crates/looma-mcp/: Cargo.toml
crates/looma-secrets/: Cargo.toml
crates/looma-storage/: Cargo.toml
design/: README.md
docs/: BENCHMARKS.md  MODELS.md  PORTING.md  TESTING.md  index.html  robots.txt  sitemap.xml
docs/data/: downloads-badge.json  stats-history.jsonl  stats.json
docs/pr-triage/: SUMMARY.md  draft-comments.md  mac-smoke-checklist.md  pr-26-rehost-checklist.md  pr-30-devmock-qa.md  tester-prompt-ian.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  devMock.ts  (+5 more)
scripts/: macos-selfsign.sh  prepare-sidecars.mjs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
(+99 files in other folders)
