[package]
name = "fly-capture-screen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fly-core.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_UI_WindowsAndMessaging",
] }
