[package]
name = "fly-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fly-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
