[package]
name = "fly-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fly-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3"
