[package]
name = "looma-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
looma-core.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
cpal.workspace = true
hound.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# System-audio loopback: record the default sink's monitor source. Works on
# PulseAudio and PipeWire (via pipewire-pulse) alike.
libpulse-binding = "2"
libpulse-simple-binding = "2"

[dev-dependencies]
tempfile = "3"
